--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,31 @@
-﻿@{
+﻿@model ReminderView
+
+@{
     ViewData["Title"] = "Reminders";
 }
 
 <div class="row">
+    @if(true/* string.IsNullOrEmpty(Model.Username) */)
+    {
+        <!-- not logged in -->
+        <div class="col-md-6">
+            <h2>Sign Up</h2>
+            @Html.Partial("~/Views/Partials/SignUp.cshtml")
+        </div>
+        <div class="col-md-6">
+            <h2>Log In</h2>
+            @Html.Partial("~/Views/Partials/Login.cshtml")
+        </div>
+    }
+    else
+    {
+        <!-- logged in -->
+        
+    }
+    
+</div>
+
+<!-- <div class="row">
     <div class="col-md-3">
         <button>Delete</button>
     </div>
@@ -15,4 +38,4 @@
     <div class="col-md-3">
         <h2>Description</h2>    
     </div>
-</div>
+</div> -->
