--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using reminder
-@using reminder.Models
+﻿@using Reminder
+@using Reminder.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
