--- a/Views/Partials/Login.cshtml
+++ b/Views/Partials/Login.cshtml
@@ -1,12 +1,15 @@
 @model LoginForm
-<form>
+<form asp-controller="Authentication" asp-action="Login" method="post">
+  @Html.ValidationSummary(false, "", new { @class = "text-danger" })
   <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <label for="exampleInputUsername1">Username</label>
+    <input asp-for="Username" type="username" class="form-control" id="exampleInputUsername1" placeholder="Enter username">
+    <div asp-validation-for="Username" class="text-danger"></div>
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <input asp-for="Password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <div asp-validation-for="Password" class="text-danger"></div>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Login</button>
 </form>
