--- a/Views/Partials/SignUp.cshtml
+++ b/Views/Partials/SignUp.cshtml
@@ -12,7 +12,7 @@
     <div asp-validation-for="Password" class="text-danger"></div>
   </div>
   <div class="form-group">
-    <label for="name1">Username</label>
+    <label for="name1">Name</label>
     <input asp-for="Name" class="form-control" id="name1" placeholder="Enter your name">
     <div asp-validation-for="Name" class="text-danger"></div>
   </div>
